fix: remove scrollbar at 640px 	modified:   online-zoo/assets/css/style.css 	new file:   online-zoo/assets/icons/arrow_t.svg 	modified:   online-zoo/pages/main/adaptive.css

--- a/online-zoo/assets/css/style.css
+++ b/online-zoo/assets/css/style.css
@@ -454,4 +454,12 @@ li {
         font-weight: 400;
       }
       /*END OF BURGER MENU*/
+
+      /*FOOTER*/
+      .form-subscribe {
+        display: none;
+      }
+      .copyrights {
+        right: 0px;
+    }
 }
