--- a/online-zoo/pages/main/adaptive.css
+++ b/online-zoo/pages/main/adaptive.css
@@ -131,13 +131,12 @@
 /*END OF 1440px ADAPDATION*/
 
 @media (max-width:980px) {
+
+    /*PREVIEW 980*/
     .preview {
         background: url(../../assets/images/Giant_Panda_t.png) no-repeat center;
         background-size: cover;
         height: 373px;
-    }
-    .animals {
-      overflow-x: hidden;
     }
     .preview-circle {
         width: 237.6px;
@@ -158,6 +157,8 @@
     .backstage-image {
         display: none;
     }
+
+    /*BACKSTAGE 980*/
     .backstage {
         padding-top: 68px;
         padding-bottom: 78px;
@@ -179,6 +180,8 @@
     .backstage-subtitle {
         margin: 31px 0 21px 0;
     }
+
+    /*ANIMAL 980*/
     .animal-slider {
         width: 93.75%;
         grid-template-columns: 1fr 1fr;
@@ -212,4 +215,41 @@
     .animal-flower-left {
         background-image: url("../../assets/images/palm_foto_t.png");
     }
+
+    /*FEEDFRIEND 980*/
+    .feed-friend {
+        padding-top: 21px;
+        padding-bottom: 51px;
+    }
+    .feed-container {
+        width: 100%;
+        padding: 9px 20px 49px;
+    }
+    .feed-title {
+        font-size: 42px;
+        line-height: 50.4px;
+    }
+    .feed-subtitle {
+        font-size: 22px;
+        line-height: 26.4px;
+    }
+    .feed-black-text {
+        margin-bottom: 10px;
+        width: 100%;
+    }
+    .feed-text {
+        width: 100%;
+    }
+    .feed-how-title {
+        margin-top: 32px;
+    }
+    .feed-arrow {
+        display: none;
+    }
+    .feed-scheme {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 28px;
+    }
+
 }
